...
                            }
                        },
                        title = {
                            Column {
                                Text(
                                    stringResource(currentSection.titleRes),
                                    modifier = Modifier.testTag("top_app_title"),
                                    style = MaterialTheme.typography.titleLarge,
                                    fontWeight = FontWeight.SemiBold
                                )
                                Text(
                                    stringResource(currentSection.subtitleRes),
                                    style = MaterialTheme.typography.bodyLarge,
...
            ) { padding ->
            LazyColumn(
                state = currentListState,
                modifier = Modifier
                    .fillMaxSize()
                    .padding(padding)
                    .testTag("main_list"),
                contentPadding = PaddingValues(
                    start = 18.dp,
                    end = 18.dp,
                    top = 8.dp,
                    bottom = 32.dp
                ),
...
